[package]
name = "jwt-ui"
version = "0.1.0"
authors = ["DeltaManiac"]
edition = "2021"
rust-version = "1.56"


[dependencies]
eframe = "0.16.0" # Gives us egui, epi and web+native backends
anyhow="1.0.55"
serde = { version = "1", features = ["derive"] }
jsonwebtoken="8.0.1"
[features]
default = []
# persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm
